Fixed minor search UI issues on IE11

--- a/assets/css/src/_search.scss
+++ b/assets/css/src/_search.scss
@@ -31,11 +31,18 @@
       height: $search_box_height;
       line-height: $search_box_height;
       color: $dark_grey;
-      background-color: inherit;
+      background-color: $light_grey;
       border: none;
-    }
-    input:focus {
-      outline: none;
+
+      &::-ms-clear {
+        display: none;
+        width:0;
+        height:0;
+      }
+      
+      &:focus {
+        outline: none;
+      }
     }
   }
 
